# playground

./: INTCli.py  Makefile  Vagrantfile  main.py  pyproject.toml  spotifyclifinalversion.py  spotimain.py
.github/workflows/: main.yml
spotifier/: __init__.py  __main__.py  cli.py
